# mfind

./: .clippy.toml  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  MILESTONES.md  Makefile  PROJECT_SUMMARY.md  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
crates/mfind-api/: Cargo.toml
crates/mfind-api/src/: handlers.rs  lib.rs  routes.rs  server.rs  state.rs
crates/mfind-api/tests/: integration_test.rs
crates/mfind-cli/: Cargo.toml
crates/mfind-cli/src/commands/: config.rs  index.rs  search.rs  service.rs
crates/mfind-cli/src/output/: mod.rs
crates/mfind-core/: Cargo.toml
crates/mfind-core/src/: lib.rs
crates/mfind-core/src/event/: batch.rs  dedup.rs  mod.rs
crates/mfind-core/src/fs/: backend.rs  fsevents.rs  generic_watch.rs  inotify.rs  mod.rs  native_fsevents.rs  scanner.rs  watcher.rs  windows_watch.rs
crates/mfind-core/src/index/: engine.rs  fst_index.rs  inode_map.rs  meta_cache.rs  stats.rs
crates/mfind-core/src/query/: ast.rs  executor.rs  parser.rs
crates/mfind-core/src/storage/: lmdb.rs  memory.rs  mod.rs  trait_mod.rs
crates/mfind-core/src/util/: mod.rs  path.rs
crates/mfind-gui/: Cargo.toml  tauri.conf.json
crates/mfind-gui/icons/: icon.icns
crates/mfind-gui/src/: app.js  commands.rs  index.html  lib.rs  main.rs  styles.css
crates/mfind-gui/tests/: gui_test.rs
crates/mfind-tui/: Cargo.toml
crates/mfind-tui/src/: app.rs  lib.rs  main.rs
crates/mfind-tui/src/ui/: mod.rs
docs/: README.md  everything-principle.md  fsevents_solution.md  market-research.md  requirements.md  scenario_test_report.md
mfind/: LICENSE-APACHE  PROJECT_SUMMARY.md
mfind/crates/mfind-cli/: Cargo.toml
mfind/crates/mfind-cli/src/: main.rs
mfind/crates/mfind-cli/src/commands/: config.rs  index.rs  mod.rs
mfind/crates/mfind-cli/src/config/: mod.rs
mfind/crates/mfind-core/src/: lib.rs
mfind/crates/mfind-core/src/event/: dedup.rs  mod.rs
mfind/crates/mfind-core/src/fs/: backend.rs  monitor.rs
mfind/crates/mfind-core/src/index/: meta_cache.rs  mod.rs
mfind/crates/mfind-core/src/query/: ast.rs  executor.rs  mod.rs  parser.rs  pattern.rs
mfind/crates/mfind-core/src/storage/: mod.rs
mfind/crates/mfind-core/src/util/: format.rs  time.rs
mfind/crates/mfind-tui/src/: app.rs
mfind/docs/: architecture.md  development.md  requirements.md
mfind/tests/integration/: common.rs  main.rs
scripts/: README.md  bench.sh  build-release.sh  gen-test-data.sh  generate_1m_files.sh  generate_test_data.sh  run_tests.sh  save-baseline.sh  sign-macos.sh
scripts/gen-test-data/: Cargo.toml  README.md
scripts/gen-test-data/src/: main.rs
tests/benchmarks/: large_scale_bench.rs  search_bench.rs
tests/integration/: main.rs
tests/scenario/: Cargo.toml  main.rs
