[package]
name = "mfind-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Workspace
mfind-core = { path = "../mfind-core" }

# Core
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Config
dirs = { workspace = true }

# Testing
[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
