[package]
name = "mfind-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Core indexing and search engine for mfind"

[dependencies]
# Core
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Filesystem
notify.workspace = true
walkdir.workspace = true
ignore.workspace = true
path-absolutize.workspace = true
dunce.workspace = true

# Index data structures
fst.workspace = true
dashmap.workspace = true
rustc-hash.workspace = true
xxhash-rust.workspace = true

# Search
regex.workspace = true
fuzzy-matcher.workspace = true

# Concurrency
rayon.workspace = true
crossbeam.workspace = true
flume.workspace = true
parking_lot = "0.12"

# Persistence
lmdb-rkv.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true

# Logging
tracing.workspace = true

# Additional
num_cpus.workspace = true
lru.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
criterion.workspace = true
