[package]
name = "mfind-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Terminal user interface for mfind"

[lib]
name = "mfind_tui"
path = "src/lib.rs"

[[bin]]
name = "mfind-tui"
path = "src/main.rs"

[dependencies]
mfind-core = { path = "../mfind-core" }

# TUI
ratatui.workspace = true
crossterm.workspace = true

# Core
tokio.workspace = true
anyhow.workspace = true
