[package]
name = "mfind-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for mfind file search tool"

[[bin]]
name = "mfind"
path = "src/main.rs"

[dependencies]
mfind-core = { path = "../mfind-core" }

# Core
tokio.workspace = true
anyhow.workspace = true

# CLI
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
indicatif.workspace = true
dialoguer.workspace = true

# Serialization
serde.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
